--- a/launcher/ui/pages/instance/InstanceSettingsPage.ui
+++ b/launcher/ui/pages/instance/InstanceSettingsPage.ui
@@ -95,6 +95,13 @@
             </property>
            </widget>
           </item>
+          <item row="2" column="1">
+           <widget class="QPushButton" name="javaDownloadBtn">
+            <property name="text">
+             <string>Download Java...</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
