--- a/launcher/ui/pages/global/LauncherPage.ui
+++ b/launcher/ui/pages/global/LauncherPage.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>646</width>
-    <height>629</height>
+    <height>635</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -376,22 +376,100 @@
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_5">
           <item>
-           <widget class="QLineEdit" name="toolbarLineEdit"/>
-          </item>
-          <item>
-           <widget class="QLabel" name="toolbarLineEdit_2">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="text">
-             <string>Possible values: add_instance, separator, folders, settings, help, update, cat. Value is denoted as a CSV.</string>
-            </property>
-            <property name="wordWrap">
+           <widget class="QListWidget" name="toolbarListWidget">
+            <property name="alternatingRowColors">
              <bool>true</bool>
             </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QGroupBox" name="horizontalGroupBox">
+            <layout class="QHBoxLayout" name="horizontalLayout">
+             <property name="leftMargin">
+              <number>2</number>
+             </property>
+             <property name="topMargin">
+              <number>2</number>
+             </property>
+             <property name="rightMargin">
+              <number>2</number>
+             </property>
+             <property name="bottomMargin">
+              <number>2</number>
+             </property>
+             <item>
+              <widget class="QComboBox" name="toolbarComboBox">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <item>
+                <property name="text">
+                 <string>add_instance</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>separator</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>folders</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>settings</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>help</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>update</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>cat</string>
+                </property>
+               </item>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="toolbarAddButton">
+               <property name="text">
+                <string>Add</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="toolbarHorizontalSpacer">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="QPushButton" name="toolbarRemoveButton">
+               <property name="text">
+                <string>Remove</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
          </layout>
